source/references/3.5.0/indirection.markdown
---
layout: default
title: "Indirection Reference"
canonical: "/references/latest/indirection.html"
---


# Indirection Reference



**This page is autogenerated; any changes will get overwritten** *(last generated on 2014-04-03 10:48:14 -0700)*


## About Indirection

Puppet's indirector support pluggable backends (termini) for a variety of key-value stores (indirections).
Each indirection type corresponds to a particular Ruby class (the "Indirected Class" below) and values are instances of that class.
Each instance's key is available from its `name` method.
The termini can be local (e.g., on-disk files) or remote (e.g., using a REST interface to talk to a puppet master).

An indirector has five methods, which are mapped into HTTP verbs for the REST interface:

* `find(key)` - get a single value (mapped to GET or POST with a singular endpoint)
* `search(key)` - get a list of matching values (mapped to GET with a plural endpoint)
* `head(key)` - return true if the key exists (mapped to HEAD)
* `destroy(key)` - remove the key van value (mapped to DELETE)
* `save(instance)` - write the instance to the store, using the instance's name as the key (mapped to PUT)

These methods are available via the `indirection` class method on the indirected classes.  For example:

    foo_cert = Puppet::SSL::Certificate.indirection.find('foo.example.com')

At startup, each indirection is configured with a terminus.
In most cases, this is the default terminus defined by the indirected class, but it can be overridden by the application or face, or overridden with the `route_file` configuration.
The available termini differ for each indirection, and are listed below.

Indirections can also have a cache, represented by a second terminus.
This is a write-through cache: modifications are written both to the cache and to the primary terminus.
Values fetched from the terminus are written to the cache.

### Interaction with REST

REST endpoints have the form `/{environment}/{indirection}/{key}`, where the indirection can be singular or plural, following normal English spelling rules.
On the server side, REST responses are generated from the locally-configured endpoints.

### Indirections and Termini

Below is the list of all indirections, their associated terminus classes, and how you select between them.

In general, the appropriate terminus class is selected by the application for you (e.g., `puppet agent` would always use the `rest`
terminus for most of its indirected classes), but some classes are tunable via normal settings.  These will have `terminus setting` documentation listed with them.

## catalog

* **Indirected Class**: `Puppet::Resource::Catalog`
* **Terminus Setting**: catalog_terminus

### `active_record` terminus

A component of ActiveRecord storeconfigs. ActiveRecord-based storeconfigs
and inventory are deprecated. See http://links.puppetlabs.com/activerecord-deprecation

### `compiler` terminus

Compiles catalogs on demand using Puppet's compiler.

### `json` terminus

Store catalogs as flat files, serialized using JSON.

### `msgpack` terminus

Store catalogs as flat files, serialized using MessagePack.

### `queue` terminus

Part of async storeconfigs, requiring the puppet queue daemon. ActiveRecord-based storeconfigs
and inventory are deprecated. See http://links.puppetlabs.com/activerecord-deprecation

### `rest` terminus

Find resource catalogs over HTTP via REST.

### `static_compiler` terminus

Compiles catalogs on demand using the optional static compiler. This
functions similarly to the normal compiler, but it replaces puppet:/// file
URLs with explicit metadata and file content hashes, expecting puppet agent
to fetch the exact specified content from the filebucket. This guarantees
that a given catalog will always result in the same file states. It also
decreases catalog application time and fileserver load, at the cost of
increased compilation time.

This terminus works today, but cannot be used without additional
configuration. Specifically:

* You must create a special filebucket resource --- with the title `puppet`
  and the `path` attribute set to `false` --- in site.pp or somewhere else
  where it will be added to every node's catalog. Using `puppet` as the title
  is mandatory; the static compiler treats this title as magical.

      filebucket { puppet:
        path => false,
      }

* You must set `catalog_terminus = static_compiler` in the puppet
  master's puppet.conf.
* The puppet master's auth.conf must allow authenticated nodes to access the
  `file_bucket_file` endpoint. This is enabled by default (see the
  `path /file` rule), but if you have made your auth.conf more restrictive,
  you may need to re-enable it.)
* If you are using multiple puppet masters, you must configure load balancer
  affinity for agent nodes. This is because puppet masters other than the one
  that compiled a given catalog may not have stored the required file contents
  in their filebuckets.

### `store_configs` terminus

Part of the "storeconfigs" feature. Should not be directly set by end users.

### `yaml` terminus

Store catalogs as flat files, serialized using YAML.

## certificate

This indirection wraps an `OpenSSL::X509::Certificate` object, representing a certificate (signed public key).
The indirection key is the certificate CN (generally a hostname).

* **Indirected Class**: `Puppet::SSL::Certificate`

### `ca` terminus

Manage the CA collection of signed SSL certificates on disk.

### `disabled_ca` terminus

Manage SSL certificates on disk, but reject any remote access
to the SSL data store.  Used when a master has an explicitly disabled
CA to prevent clients getting confusing 'success' behaviour.

### `file` terminus

Manage SSL certificates on disk.

### `rest` terminus

Find certificates over HTTP via REST.

## certificate_request

This indirection wraps an `OpenSSL::X509::Request` object, representing a certificate signing request (CSR).
The indirection key is the certificate CN (generally a hostname).

* **Indirected Class**: `Puppet::SSL::CertificateRequest`

### `ca` terminus

Manage the CA collection of certificate requests on disk.

### `disabled_ca` terminus

Manage SSL certificate requests on disk, but reject any remote access
to the SSL data store. Used when a master has an explicitly disabled CA to
prevent clients getting confusing 'success' behaviour.

### `file` terminus

Manage the collection of certificate requests on disk.

### `memory` terminus

Store certificate requests in memory. This is used for testing puppet.

### `rest` terminus

Find and save certificate requests over HTTP via REST.

## certificate_revocation_list

This indirection wraps an `OpenSSL::X509::CRL` object, representing a certificate revocation list (CRL).
The indirection key is the CA name (usually literally `ca`).

* **Indirected Class**: `Puppet::SSL::CertificateRevocationList`

### `ca` terminus

Manage the CA collection of certificate requests on disk.

### `disabled_ca` terminus

Manage SSL certificate revocation lists, but reject any remote access
to the SSL data store. Used when a master has an explicitly disabled CA to
prevent clients getting confusing 'success' behaviour.

### `file` terminus

Manage the global certificate revocation list.

### `rest` terminus

Find and save certificate revocation lists over HTTP via REST.

## certificate_status

This indirection represents the host that ties a key, certificate, and certificate request together.
The indirection key is the certificate CN (generally a hostname).

* **Indirected Class**: `Puppet::SSL::Host`

### `file` terminus

Manipulate certificate status on the local filesystem. Only functional
on the CA.

### `rest` terminus

Sign, revoke, search for, or clean certificates & certificate requests over HTTP.

## data_binding

Where to find external data bindings.

* **Indirected Class**: `Puppet::DataBinding`
* **Terminus Setting**: data_binding_terminus

### `hiera` terminus

Retrieve data using Hiera.

### `none` terminus

A Dummy terminus that always returns nil for data lookups.

## facts

* **Indirected Class**: `Puppet::Node::Facts`
* **Terminus Setting**: facts_terminus

### `active_record` terminus

A component of ActiveRecord storeconfigs and inventory. ActiveRecord-based storeconfigs
and inventory are deprecated. See http://links.puppetlabs.com/activerecord-deprecation

### `couch` terminus

Store facts in CouchDB. This should not be used with the inventory service;
it is for more obscure custom integrations. If you are wondering whether you
should use it, you shouldn't; use PuppetDB instead.

### `facter` terminus

Retrieve facts from Facter.  This provides a somewhat abstract interface
between Puppet and Facter.  It's only `somewhat` abstract because it always
returns the local host's facts, regardless of what you attempt to find.

### `inventory_active_record` terminus

Medium-performance fact storage suitable for the inventory service.
Most users should use PuppetDB instead. Note: ActiveRecord-based storeconfigs
and inventory are deprecated. See http://links.puppetlabs.com/activerecord-deprecation

### `inventory_service` terminus

Find and save facts about nodes using a remote inventory service.

### `memory` terminus

Keep track of facts in memory but nowhere else.  This is used for
one-time compiles, such as what the stand-alone `puppet` does.
To use this terminus, you must load it with the data you want it
to contain.

### `network_device` terminus

Retrieve facts from a network device.

### `rest` terminus

Find and save facts about nodes over HTTP via REST.

### `store_configs` terminus

Part of the "storeconfigs" feature. Should not be directly set by end users.

### `yaml` terminus

Store client facts as flat files, serialized using YAML, or
return deserialized facts from disk.

## file_bucket_file

* **Indirected Class**: `Puppet::FileBucket::File`

### `file` terminus

Store files in a directory set based on their checksums.

### `rest` terminus

This is a REST based mechanism to send/retrieve file to/from the filebucket

### `selector` terminus

Select the terminus based on the request

## file_content

* **Indirected Class**: `Puppet::FileServing::Content`

### `file` terminus

Retrieve file contents from disk.

### `file_server` terminus

Retrieve file contents using Puppet's fileserver.

### `rest` terminus

Retrieve file contents via a REST HTTP interface.

### `selector` terminus

Select the terminus based on the request

## file_metadata

* **Indirected Class**: `Puppet::FileServing::Metadata`

### `file` terminus

Retrieve file metadata directly from the local filesystem.

### `file_server` terminus

Retrieve file metadata using Puppet's fileserver.

### `rest` terminus

Retrieve file metadata via a REST HTTP interface.

### `selector` terminus

Select the terminus based on the request

## instrumentation_data

* **Indirected Class**: `Puppet::Util::Instrumentation::Data`

### `local` terminus

Undocumented.

### `rest` terminus

Undocumented.

## instrumentation_listener

* **Indirected Class**: `Puppet::Util::Instrumentation::Listener`

### `local` terminus

Undocumented.

### `rest` terminus

Undocumented.

## instrumentation_probe

* **Indirected Class**: `Puppet::Util::Instrumentation::IndirectionProbe`

### `local` terminus

Undocumented.

### `rest` terminus

Undocumented.

## key

This indirection wraps an `OpenSSL::PKey::RSA object, representing a private key.
The indirection key is the certificate CN (generally a hostname).

* **Indirected Class**: `Puppet::SSL::Key`

### `ca` terminus

Manage the CA's private on disk.  This terminus *only* works
with the CA key, because that's the only key that the CA ever interacts
with.

### `disabled_ca` terminus

Manage the CA private key, but reject any remote access
to the SSL data store. Used when a master has an explicitly disabled CA to
prevent clients getting confusing 'success' behaviour.

### `file` terminus

Manage SSL private and public keys on disk.

### `memory` terminus

Store keys in memory. This is used for testing puppet.

## node

Where to find node information.
A node is composed of its name, its facts, and its environment.

* **Indirected Class**: `Puppet::Node`
* **Terminus Setting**: node_terminus

### `active_record` terminus

A component of ActiveRecord storeconfigs. ActiveRecord-based storeconfigs
and inventory are deprecated. See http://links.puppetlabs.com/activerecord-deprecation

### `exec` terminus

Call an external program to get node information.  See
the [External Nodes](http://docs.puppetlabs.com/guides/external_nodes.html) page for more information.

### `ldap` terminus

Search in LDAP for node configuration information.  See
the [LDAP Nodes](http://docs.puppetlabs.com/guides/ldap_nodes.html) page for more information.  This will first
search for whatever the certificate name is, then (if that name
contains a `.`) for the short name, then `default`.

### `memory` terminus

Keep track of nodes in memory but nowhere else.  This is used for
one-time compiles, such as what the stand-alone `puppet` does.
To use this terminus, you must load it with the data you want it
to contain; it is only useful for developers and should generally not
be chosen by a normal user.

### `msgpack` terminus

Store node information as flat files, serialized using MessagePack,
or deserialize stored MessagePack nodes.

### `plain` terminus

Always return an empty node object. Assumes you keep track of nodes
in flat file manifests.  You should use it when you don't have some other,
functional source you want to use, as the compiler will not work without a
valid node terminus.

Note that class is responsible for merging the node's facts into the
node instance before it is returned.

### `rest` terminus

Get a node via REST. Puppet agent uses this to allow the puppet master
to override its environment.

### `store_configs` terminus

Part of the "storeconfigs" feature. Should not be directly set by end users.

### `write_only_yaml` terminus

Store node information as flat files, serialized using YAML,
does not deserialize (write only).

### `yaml` terminus

Store node information as flat files, serialized using YAML,
or deserialize stored YAML nodes.

## report

* **Indirected Class**: `Puppet::Transaction::Report`

### `msgpack` terminus

Store last report as a flat file, serialized using MessagePack.

### `processor` terminus

Puppet's report processor.  Processes the report with each of
the report types listed in the 'reports' setting.

### `rest` terminus

Get server report over HTTP via REST.

### `yaml` terminus

Store last report as a flat file, serialized using YAML.

## resource

* **Indirected Class**: `Puppet::Resource`

### `active_record` terminus

A component of ActiveRecord storeconfigs. ActiveRecord-based storeconfigs
and inventory are deprecated. See http://links.puppetlabs.com/activerecord-deprecation

### `ral` terminus

Manipulate resources with the resource abstraction layer. Only used internally.

### `rest` terminus

Maniuplate resources remotely? Undocumented.

### `store_configs` terminus

Part of the "storeconfigs" feature. Should not be directly set by end users.

## resource_type

* **Indirected Class**: `Puppet::Resource::Type`

### `parser` terminus

Return the data-form of a resource type.

### `rest` terminus

Retrieve resource types via a REST HTTP interface.

## status

* **Indirected Class**: `Puppet::Status`

### `local` terminus

Get status locally. Only used internally.

### `rest` terminus

Get puppet master's status via REST. Useful because it tests the health
of both the web server and the indirector.



----------------

*This page autogenerated on 2014-04-03 10:48:17 -0700*
